<resources>
    <string name="app_name">BookExchange</string>
    <string name="contact">Contact</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_email">Enter email</string>
    <string name="check_email">Check your email</string>
    <string name="check_email_error">Could not send email</string>
    <string name="contact_book_owner">Contact:</string>
    <string name="enter_number">Enter phone number</string>
    <string name="email_address">Email Address</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="log_in">Log in</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload</string>
    <string name="books">Books:</string>
    <string name="uploaded_on">Uploaded on:</string>
    <string name="semester">Semester:</string>
    <string name="branch">Branch:</string>
    <string name="number">+91</string>
    <string name="enter_details">Enter Details</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_book_names">Enter book names</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="enter_usn">Enter USN</string>
    <string name="home">Home</string>
    <string name="select_semester">Select Semester</string>
    <string name="your_uploads">Your uploads</string>
    <string name="add">Add</string>
    <string name="select_image">Select Image</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="select_branch">Select Branch</string>
    <string name="account_could_not_be_created">Account could not be created</string>
    <string name="log_in_successful">Log in successful</string>
    <string name="create_free_account">Create free account</string>
    <string name="need_an_account">Need an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="email_address_hint">name@email.com</string>
    <string name="log_in_to_your_account">Log in to your account</string>

    <string-array name="spinner_branch">
        <item>ISE</item>
        <item>CSE</item>
        <item>ECE</item>
        <item>MECH</item>
        <item>CIVIL</item>
        <item>EEE</item>
    </string-array>

    <string-array name="semester">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
</resources>
