<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient"
    tools:context=".CreateAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="8dp"
        app:cardCornerRadius="20dp"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:text="@string/create_an_account"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/enter_details"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/name_edit_text_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:drawableEnd="@drawable/ic_person"
                android:hint="@string/enter_name"
                android:fontFamily="@font/poppins_medium"
                android:inputType="text"/>

            <EditText
                android:id="@+id/email_edit_text_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#DAE0E2"
                android:drawableEnd="@drawable/ic_mail"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/email_address_hint"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/password_edit_text_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#DAE0E2"
                android:drawableEnd="@drawable/ic_lock"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/enter_password_hint"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/re_password_edit_text_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:drawableEnd="@drawable/ic_lock"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/usn_edit_text_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:drawableEnd="@drawable/ic_list"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/enter_usn"
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/select_branch"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/branch_spinner_create_account"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/poppins_medium"
                android:entries="@array/spinner_branch"/>


            <Button
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/log_in_button"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/create_free_account"
                android:textAllCaps="false"
                android:onClick="createAccount"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:elevation="5dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>