<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_marginTop="10dp"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:text="@string/log_in_to_your_account"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/email_address" />

                <EditText
                    android:id="@+id/email_edit_text_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/email_address_hint"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textEmailAddress"
                    android:drawableEnd="@drawable/ic_mail"/>

                <EditText
                    android:id="@+id/password_edit_text_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/enter_password_hint"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/ic_lock"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"/>

                <Button
                    android:id="@+id/log_in_button"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/log_in_button"
                    android:text="@string/log_in"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginTop="18dp"
                    android:textAllCaps="false"
                    android:onClick="logInClick"
                    android:textSize="16sp"
                    app:elevation="5dp"
                    android:fontFamily="@font/poppins_medium"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/need_an_account"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/create_account_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/create_an_account"
                        android:onClick="createAccountClick"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</ScrollView>