<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    tools:context=".ResetPasswordActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:padding="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_medium"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:text="@string/reset_password"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/email_address"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/reset_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#DAE0E2"
                android:hint="@string/enter_email"
                android:drawableEnd="@drawable/ic_mail"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textEmailAddress"/>

            <Button
                android:id="@+id/reset_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/log_in_button"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:elevation="5dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>