<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity">

    <ScrollView
        android:id="@+id/create_entry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation_bar">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_margin="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/enter_details"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_margin="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:padding="20dp"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:src="@drawable/books"/>

                            <Button
                                android:layout_gravity="bottom|center"
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:text="@string/select_image"
                                android:background="@drawable/select_image_button"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                   <LinearLayout
                       android:gravity="center|start"
                       android:layout_margin="8dp"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical">

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/select_semester"
                           android:fontFamily="@font/poppins_medium"
                           android:textColor="@color/black"
                           android:textSize="18sp"
                           android:textStyle="bold" />

                       <Spinner
                           android:layout_marginTop="10dp"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:entries="@array/semester"/>

                       <TextView
                           android:layout_marginTop="20dp"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/select_branch"
                           android:fontFamily="@font/poppins_medium"
                           android:textColor="@color/black"
                           android:textSize="18sp"
                           android:textStyle="bold" />

                       <Spinner
                           android:layout_marginTop="10dp"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:entries="@array/spinner_branch"/>
                   </LinearLayout>


                </LinearLayout>
                    <EditText
                        android:layout_margin="10dp"
                        android:gravity="start"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:hint="@string/enter_book_names"
                        android:fontFamily="@font/poppins_medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"/>

               <LinearLayout
                   android:layout_marginTop="10dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/number"
                       android:fontFamily="@font/poppins_medium"
                       android:textColor="@color/black"
                       android:textSize="18sp"
                       android:layout_marginStart="8dp"
                       android:textStyle="bold"/>

                   <EditText
                       android:layout_marginStart="10dp"
                       android:layout_marginEnd="20dp"
                       android:gravity="start"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/enter_number"
                       android:fontFamily="@font/poppins_medium"/>
               </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/colorAccent"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_nav_bar" />
</RelativeLayout>